--- a/_config.yml
+++ b/_config.yml
@@ -17,13 +17,13 @@ baseurl: "/mdzjobs" # the subpath of your site, e.g. /blog
 url: "http://pythonmendoza.github.io" # the base hostname & protocol for your site
 
 #sidebar
-default-image:  # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
+default-image: "pythonar.png" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
 
-#footer
-built-by: webjeda
-copyright:
-   name: webjeda
-   link: 'http://blog.webjeda.com'
+# #footer
+# built-by: webjeda
+# copyright:
+#    name: webjeda
+#    link: 'http://blog.webjeda.com'
 
 # Build settings
 markdown: kramdown
@@ -38,15 +38,14 @@ analytics: UA-83979019-1
 disqus-shortname: webjeda-demo
 
 #social
-facebook: http://facebook.com/webjeda
-quora: http://quora.com/sharathdt
-twitter: http://twitter.com/@webjeda
-github: http://github.com/webjeda
+facebook: https://www.facebook.com/Python-Mendoza-2141234529435056/
+twitter: http://twitter.com/pythonmendoza
+github: http://github.com/pythonmendoza
 
 #facebook like box
-fb-app-id: 549480635219583
-fb-page-url: https://www.facebook.com/webjeda/
-fb-page-title: webjeda
+# fb-app-id: 549480635219583
+# fb-page-url: https://www.facebook.com/webjeda/
+# fb-page-title: webjeda
 
 # Sass style
 sass:
