--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ url: "http://pythonmendoza.github.io" # the base hostname & protocol for your si
 default-image: "pythonar.png" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
 
 # #footer
-# built-by: webjeda
-# copyright:
-#    name: webjeda
-#    link: 'http://blog.webjeda.com'
+# built-by: webjeda | Python Mendoza
+copyright:
+   name: Python Mendoza
+   link: 'http://pythonmendoza.github.io'
 
 # Build settings
 markdown: kramdown
@@ -32,10 +32,10 @@ paginate: 6
 paginate_path: /page:num/
 
 # Tracker
-analytics: UA-83979019-1
+# analytics: UA-83979019-1
 
 # Comments
-disqus-shortname: webjeda-demo
+# disqus-shortname: webjeda-demo
 
 #social
 facebook: https://www.facebook.com/Python-Mendoza-2141234529435056/
