add new facebook

--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ paginate_path: /page:num/
 # disqus-shortname: webjeda-demo
 
 #social
-facebook: https://www.facebook.com/Python-Mendoza-2141234529435056/
+facebook: https://www.facebook.com/pythonmendoza/
 twitter: http://twitter.com/pythonmendoza
 github: http://github.com/pythonmendoza
 
