--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   
   
   
-baseurl: "/mdzjobs" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://mdzjobs.github.io" # the base hostname & protocol for your site
 
 #sidebar
