--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Mendoza Job[s]
+title: Mendoza [TIC]
 email: pythonmendoza@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-   Mendoza Jobs.
+   Mendoza Job[s] y Evento[s].
   
   
   
