--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 
 # Site settings
 title: Mendoza [TIC]
-email: pythonmendoza@gmail.com
+email: mdztic@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-   Mendoza Job[s] y Evento[s].
+   Mendoza [TIC] = Mendoza Job[s] + Evento[s]
   
   
   
-baseurl: "/mdzjobs.github.io" # the subpath of your site, e.g. /blog
-url: "http://mdzjobs.github.io" # the base hostname & protocol for your site
+baseurl: "/mdztic.github.io" # the subpath of your site, e.g. /blog
+url: "http://mdztic.github.io" # the base hostname & protocol for your site
 
 #sidebar
 default-image: "pythonar.png" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
@@ -22,8 +22,8 @@ default-image: "pythonar.png" # If there is no featured image in a post then thi
 # #footer
 # built-by: webjeda | Python Mendoza
 copyright:
-   name: Python Mendoza
-   link: 'http://pythonmendoza.github.io'
+   name: Mendoza [TIC]
+   link: 'http://mdztic.github.io'
 
 # Build settings
 markdown: kramdown
@@ -38,9 +38,9 @@ paginate_path: /page:num/
 # disqus-shortname: webjeda-demo
 
 #social
-facebook: https://www.facebook.com/pythonmendoza/
-twitter: http://twitter.com/pythonmendoza
-github: http://github.com/pythonmendoza
+facebook: https://www.facebook.com/mdztic/
+twitter: http://twitter.com/mdztic
+github: http://github.com/mdztic
 
 #facebook like box
 # fb-app-id: 549480635219583
