--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description:  # this means to ignore newlines until "baseurl:"
   
   
 baseurl: "/mdztic.github.io" # the subpath of your site, e.g. /blog
-url: "http://mdztic.github.io" # the base hostname & protocol for your site
+# url: "http://mdztic.github.io" # the base hostname & protocol for your site
 
 #sidebar
 default-image: "pythonar.png" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
