--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: "/mdztic.github.io" # the subpath of your site, e.g. /blog
 url: "http://mdztic.github.io" # the base hostname & protocol for your site
 
 #sidebar
-default-image: "pythonar.png" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
+default-image: "mdzall.jpg" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
 
 # #footer
 # built-by: webjeda | Python Mendoza
@@ -42,9 +42,9 @@ facebook: https://www.facebook.com/mdztic/
 twitter: http://twitter.com/mdz_tic
 github: http://github.com/mdztic
 
-#facebook like box
+# facebook like box
 # fb-app-id: 549480635219583
-# fb-page-url: https://www.facebook.com/webjeda/
+# fb-page-url: https://www.facebook.com/mdztic/
 # fb-page-title: webjeda
 
 # Sass style
