--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description:  # this means to ignore newlines until "baseurl:"
   
   
   
-baseurl: "/mdztic.github.io" # the subpath of your site, e.g. /blog
+# baseurl: "/mdztic.github.io" # the subpath of your site, e.g. /blog
 url: "http://mdztic.github.io" # the base hostname & protocol for your site
 
 #sidebar
