--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description:  # this means to ignore newlines until "baseurl:"
 url: "http://mdztic.github.io" # the base hostname & protocol for your site
 
 #sidebar
-default-image: "mdzall.jpg" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
+default-image: "Mdzall.jpg" # If there is no featured image in a post then this image will be showed. Also on all pages this image will be showed. Use a 500x250 image.
 
 # #footer
 # built-by: webjeda | Python Mendoza
